[gd_scene load_steps=20 format=3 uid="uid://chmvydxscs0bv"]

[ext_resource type="Script" path="res://Mob/enemy.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://b3bf0ufdufo4b" path="res://Mob/Small Bee/Attack/Attack-Sheet.png" id="1_wwihg"]
[ext_resource type="Texture2D" uid="uid://b86pdjcegjirj" path="res://Mob/Small Bee/Fly/Fly-Sheet.png" id="2_3tqot"]
[ext_resource type="Texture2D" uid="uid://cjxbg2g3c636m" path="res://Mob/Small Bee/Hit/Hit-Sheet.png" id="3_ghdis"]

[sub_resource type="AtlasTexture" id="AtlasTexture_if677"]
atlas = ExtResource("1_wwihg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f78ie"]
atlas = ExtResource("1_wwihg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou81r"]
atlas = ExtResource("1_wwihg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i3dj"]
atlas = ExtResource("1_wwihg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bee48"]
atlas = ExtResource("2_3tqot")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yohcd"]
atlas = ExtResource("2_3tqot")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgq0d"]
atlas = ExtResource("2_3tqot")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6csc3"]
atlas = ExtResource("2_3tqot")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gugu4"]
atlas = ExtResource("3_ghdis")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyccj"]
atlas = ExtResource("3_ghdis")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gnp0"]
atlas = ExtResource("3_ghdis")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n2t4"]
atlas = ExtResource("3_ghdis")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rp7as"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_if677")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f78ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou81r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i3dj")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bee48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yohcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgq0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6csc3")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gugu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyccj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gnp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n2t4")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_te6iq"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 96.0052

[node name="Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 4
script = ExtResource("1_script")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rp7as")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_te6iq")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
